# simple_tcp_client_server

./: CMakeLists.txt  build.bat  gen_project.bat
src/: Network_1__client.cpp  Network_1__server.cpp  client.cpp  server.cpp
